--- a/css/scss/_footer.scss
+++ b/css/scss/_footer.scss
@@ -6,6 +6,11 @@ footer{
     height: 50px;
     background-color: #000;
     color:#fff;  
+    .copyright{
+        span{
+            display: none;
+        }
+    }
     #tel{
         box-sizing: content-box;
         $size : 50px;
@@ -22,8 +27,50 @@ footer{
         line-height: $size;
     }  
     #btMenu{
-        display: inline-block;
         width: 50px;
         height: 50px;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        span{
+            display: inline-block;
+            width: 100%;
+            height: 1px;
+            background-color: #fff;      
+            transition: .3s;      
+        }
     }
+    #btMenu.active{
+        span:nth-child(1){
+            transform-origin: top left;
+            transform: rotate(45deg) translate(1px, -6px);
+        }
+        span:nth-child(2){
+            display: none;
+        }
+        span:nth-child(3){
+            transform-origin: top left;
+            transform: rotate(-45deg) translate(1px, 4px);
+        }
+    }
+    img.logoCreateur{
+        width: 25px;
+        display: inline-block;
+        vertical-align: middle;
+    }
+}
+@media (min-width: 640px){
+    footer{
+        line-height: 50px;
+        .copyright{
+            span{
+                display: inline-block;
+            }
+        }
+        #btMenu{
+            display: none;
+        }
+    }
+    
 }
