--- a/css/scss/_vars.scss
+++ b/css/scss/_vars.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700');
 $rouge : #ee3524;
 $grisFonce : #888a8c;
 $grisClair : #d5d7d8;
