--- a/css/scss/_nav.scss
+++ b/css/scss/_nav.scss
@@ -1,5 +1,6 @@
 nav {
     position: fixed;
+    z-index: 9998;
     top: 0;
     left: -100%;
     width: 100%;
@@ -23,6 +24,9 @@ nav {
             width: 100%;
             height: 50px;            
             a {
+                text-decoration: none;
+                color:inherit;
+                font-weight: bold;
                 display: inline-block;
                 width: 100%;
                 height: 50px;
@@ -31,6 +35,15 @@ nav {
             }
             a:first-letter{
                 text-transform: uppercase;
+            }
+            a:hover{
+                color:$rouge;
+            }
+        }
+        li.active{
+            background-color: #fff;
+            a{
+                color:$rouge;
             }
         }
     }
@@ -63,6 +76,7 @@ nav:before {
         color: #000;
         justify-content: flex-start;
         border-top:1px solid $grisClair;
+        background-color: transparent;
         ul{
             flex-direction: row;
             width: auto;
@@ -72,6 +86,9 @@ nav:before {
                 a:first-child{
                     padding: 0 1rem 0 0;
                 }
+            }
+            li.active{
+                background-color: transparent;
             }
         }
         .logo{
