--- a/css/scss/app.scss
+++ b/css/scss/app.scss
@@ -19,15 +19,16 @@ html, body{
     z-index: 1;
 }
 main{
+    position: relative;
     min-height: 100%;
+    z-index: 1;
 }
 a{
     color: $rouge;
 }
 h1{
     position: relative;
-    z-index: 1;
-    padding-left: 10px;
+   padding-left: 10px;
 }
 h1:before{
     content:"";
