--- a/css/scss/_nav.scss
+++ b/css/scss/_nav.scss
@@ -22,7 +22,7 @@ nav {
             margin: 0;
             list-style: none;
             width: 100%;
-            height: 50px;            
+            // height: 50px;            
             a {
                 text-decoration: none;
                 color:inherit;
@@ -35,10 +35,7 @@ nav {
             }
             a:first-letter{
                 text-transform: uppercase;
-            }
-            a:hover{
-                color:$rouge;
-            }
+            }            
         }
         li.active{
             background-color: #fff;
@@ -46,6 +43,9 @@ nav {
                 color:$rouge;
             }
         }
+    }
+    ul.subMenu{
+        display: none;
     }
     .logo{
         position: absolute;
@@ -69,7 +69,7 @@ nav:before {
     transform-origin: bottom right;
 }
 
-@media (min-width:640px){
+@media (min-width:720px){
     nav{
         position: static;
         height: auto;
@@ -90,9 +90,19 @@ nav:before {
             li.active{
                 background-color: transparent;
             }
+            a:hover{
+                color:$rouge;
+            }
         }
         .logo{
             display: none;
+        }
+        ul.subMenu{
+            position: absolute;
+            background-color: #fff;
+            padding: 0 1rem;
+            z-index: 9998;
+            box-shadow: 2px 2px 3px rgba(0,0,0,.4);
         }
     }
 }
