update contact form AJAX

--- a/css/scss/_cookies.scss
+++ b/css/scss/_cookies.scss
@@ -1,9 +1,9 @@
 .cookie-bar{
     position: fixed;
-    bottom: 0;
+    bottom: 60px;
     right: 0;
     z-index: 9999;
-    width: 50%;
+    width: 45%;
     background-color: $rouge;
     color:#fff;
     padding: 1rem;
