--- a/css/scss/app.scss
+++ b/css/scss/app.scss
@@ -5,8 +5,13 @@
 @import 'accueil';
 @import 'atouts';
 @import 'equipe';
+@import 'agences';
 @import 'map';
+@import 'formInput';
 @import 'footer';
+*{
+    box-sizing: border-box;
+}
 html, body{
     height: 100%;
     background-color: #F6F6F6;
